Fixed some spacing issues on really small mobile screens.

--- a/app/public/styles/new-styles.css
+++ b/app/public/styles/new-styles.css
@@ -90,3 +90,9 @@ footer ul {
 textarea {
     width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+    #logo {
+      width: 50%;
+    }
+}
